---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: in_place_update.cm
============================================================
Source code:
func test_in_place_update() -> felt {
    let a = 5;
    a = a + 1;
    let b = 10;
    b = b + a;
    return b;
}

func test_loop_optimization() -> felt {
    let i = 0;
    let sum = 0;
    while (i != 5) {
        sum = sum + i;
        i = i + 1;
    }
    return sum;
}

func main() -> felt {
    let x = test_in_place_update();
    let y = test_loop_optimization();
    return x + y;
}
============================================================
Generated CASM:
test_in_place_update:
test_in_place_update:
test_in_place_update_0:
   0: 6 5 _ 0              // Store immediate: [fp + 0] = 5
   1: 1 0 1 0              // [fp + 0] = [fp + 0] op 1
   2: 6 10 _ 1             // Store immediate: [fp + 1] = 10
   3: 0 1 0 1              // [fp + 1] = [fp + 1] op [fp + 0]
   4: 4 1 _ -3             // Return value 0: [fp -3] = [fp + 1]
   5: 15 _ _ _             // return
test_loop_optimization:
test_loop_optimization:
test_loop_optimization_0:
   6: 6 0 _ 0              // Store immediate: [fp + 0] = 0
   7: 6 0 _ 1              // Store immediate: [fp + 1] = 0
test_loop_optimization_1:
   8: 3 0 5 2              // [fp + 2] = [fp + 0] op 5
   9: 31 2 2 _             // if [fp + 2] != 0 jmp rel test_loop_optimization_2
  10: 20 14 _ _            // jump abs test_loop_optimization_3
test_loop_optimization_2:
  11: 0 1 0 1              // [fp + 1] = [fp + 1] op [fp + 0]
  12: 1 0 1 0              // [fp + 0] = [fp + 0] op 1
  13: 20 8 _ _             // jump abs test_loop_optimization_1
test_loop_optimization_3:
  14: 4 1 _ -3             // Return value 0: [fp -3] = [fp + 1]
  15: 15 _ _ _             // return
main:
  16: 12 1 0 _             // call test_in_place_update
  17: 4 0 _ 2              // Store: [fp + 2] = [fp + 0]
  18: 12 4 6 _             // call test_loop_optimization
  19: 4 3 _ 5              // Store: [fp + 5] = [fp + 3]
  20: 0 2 5 -3             // [fp + -3] = [fp + 2] op [fp + 5]
  21: 15 _ _ _             // return
